--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "ng2-file-upload": "^3.0.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "^15.0.1",
+    "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^16.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
